--- a/style.css
+++ b/style.css
@@ -77,5 +77,7 @@ button {
     position: absolute;
     left: 200px;
     top: 40px;
+    touch-action: none;
     transition: left 0.2s ease, top 0.2s ease;
 }
+
