--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     background-color: #ffe6e6;
     margin: 0;
     overflow: hidden;
-    font-family: 'Great Vibes', cursive;
+    font-family: 'Poppins', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,6 +15,11 @@ body {
     z-index: 1;
     animation: aparecerFlor 2.5s ease-out forwards;
 }
+
+h1, h2 {
+    font-family: 'Great Vibes', cursive;
+    font-size: 32px;
+ }
 
 @keyframes aparecerFlor {
     0% { transform: scale(0); opacity: 0; }
@@ -80,5 +85,6 @@ button {
     touch-action: none;
     transition: left 0.2s ease, top 0.2s ease;
 }
+
 
 
